# Hasken-Rayuwa-Backend

./: .env.prod  .gitignore  README.md  alembic.ini  dev.sqlite  exit  main.py  migrate_data.py  postgres_dump.sql  prod.sqlite  production.db  pyproject.toml  remove.py  requirements.txt  transfer_data.py
alembic/: env.py
alembic/versions/: 023807669d43_add_discipleshipreport_table.py  1357e8261498_update_column_types_for_users_table.py  300405940ece_modified_the_film_show_table_model.py  58ca524ac9df_modified_filmshowdata_table.py  5c5777125a5d_modified_the_state_enum.py  5ccc08154198_initial.py  5eadda5d4b52_modified_discipleship_talble_model.py  62a8657acf8a_modified_the_film_show_table_model.py  6465ad9e9f58_initial_migration_on_the_new_sqlite_.py  68151a0c483d_recreated_missing_revision.py  68eb10d40dd7_baseline_schema.py  9002e7d55847_initial_migration.py  (+15 more)
core/: auth.py  config.py
db/: database copy.py  database.py  s3_backup.py
discipleshipuploads/: 4639e43d-2e44-42a9-88fa-b5879c34acbf.xlsx
filmshowuploads/: 444bfa76-d8be-4f67-a15c-dace6221b054.xlsx  7f6f0e72-5045-482d-a8a5-c2773dcd699d.xlsx  a1b358d4-ef00-49a9-8352-5377eda2aeba.xlsx  e73b6442-7a82-4985-a114-7879c37ad9fa.xlsx
models/: __init__.py  blogs.py  discipleship.py  filmshow.py  links.py  states.py  users.py
routes/: auth.py  blogs.py  discipleship.py  filmshow.py  links.py  states.py  users.py
schemas/: blogs.py  discipleship.py  dump.py  filmshow.py  states.py
tests/: test.py
uploads/: 3c6a5933-4faa-41a5-85c3-f433bb0bd7a3.xlsx  88e2de76-f48d-496f-a0f4-dd015e56134e.xlsx  hasken.lnk
