[tool.poetry]
name = "hasken-rayuwa-backend"
version = "0.1.0"
description = ""
authors = ["chukwumdiebube ojinta <chukwumdiebubeojinta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
alembic = "^1.13.1"
coverage = "^7.5.1"
pytest-cov = "^5.0.0"
pydantic-settings = "^2.2.1"
pytube = "^15.0.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pydantic-extra-types = "^2.7.0"
phonenumbers = "^8.13.37"
cloudinary = "^1.40.0"
psycopg = "^3.1.19"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
databases = {extras = ["postgresql"], version = "^0.9.0"}
python-dotenv = "^1.0.1"
boto3 = "^1.35.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
